--- a/index.html
+++ b/index.html
@@ -276,10 +276,10 @@
   // CONFIG (n8n)
   // =========================
   // Endpoint que responde o "Guia rápido" com base na FAQ (resumo prático)
-  const GUIDE_ENDPOINT  = "https://SEU-N8N-WEBHOOK-AQUI/mb/guia";
+  const GUIDE_ENDPOINT  = "https://bitter-hat-f13.asilvino19.workers.dev/webhook/mb/guia";
 
   // Endpoint que recebe abertura de chamado (com anexo)
-  const TICKET_ENDPOINT = "https://SEU-N8N-WEBHOOK-AQUI/mb/chamado";
+  const TICKET_ENDPOINT = "https://bitter-hat-f13.asilvino19.workers.dev/webhook/mb/chamado";
 
   // =========================
   // STATE
